--- a/index.css
+++ b/index.css
@@ -25,11 +25,12 @@ header nav {
 
 header nav img {
     border-radius: 50px;
-    height: 5dvw;
-    width: 5dvw;
+    height: clamp(35px, 5dvw, 55px);
+    width: clamp(35px, 5dvw, 55px);
     box-shadow: 0px 0px 10px rgba(92, 212, 212, 0.521);
 }
-header nav img:hover{
+
+header nav img:hover {
     transform: scale(1.02)
 }
 
@@ -91,8 +92,8 @@ header section:nth-of-type(1) h1 {
     color: transparent;
     background: linear-gradient(rgb(248, 159, 25), rgb(239, 205, 37));
     -webkit-background-clip: text;
-    -webkit-text-stroke: 0.2px black;
-    font-size: clamp(20px, 3dvw, 30px);
+    -webkit-text-stroke: 1px black;
+    font-size: clamp(25px, 3dvw, 35px);
     margin: 0px;
     letter-spacing: 1.5px;
 }
@@ -122,18 +123,18 @@ header section:nth-of-type(2) p {
 }
 
 header section:nth-of-type(2) button {
-    border-radius: 5px;
+    border-radius: 10px;
     background-color: var(--theme-color);
     border: none;
-    font-size: clamp(7px, 1dvw, 10px);
+    font-size: clamp(10px, 1dvw, 11px);
     color: white;
     float: right;
-    font-weight: bold;
     position: relative;
-    height: clamp(17px, 7dvw, 25px);
-    width: clamp(55px, 7dvw, 80px);
+    height: clamp(25px, 7dvw, 30px);
+    width: clamp(75px, 7dvw, 130px);
     text-align: center;
     overflow: hidden;
+    box-shadow: 2px 2px 3px black;
 }
 
 header section:nth-of-type(2) button::after {
@@ -142,17 +143,40 @@ header section:nth-of-type(2) button::after {
     top: 0%;
     left: -20%;
     height: 100%;
-    width: 20px;
-    background-color: rgba(103, 102, 102, 0.498);
+    width: 30px;
+    background: linear-gradient(to left, rgba(128, 128, 128, 0.479), transparent);
     transform: skew(-20deg);
     animation: btnshadow 2s linear infinite;
 }
 
 @keyframes btnshadow {
+    0% {}
+
+    30% {
+        left: 120%;
+    }
+
+    100% {
+        left: 120%;
+    }
+}
+
+#swipe {
+    background-color: transparent;
+    border: none;
+    color: var(--theme-color);
+    font-size: clamp(10px, 1dvw, 11px);
+    position: fixed;
+    left: 49%;
+    bottom: 2%;
+    animation: swipingtext 1s infinite;
+}
+
+@keyframes swipingtext {
     from {}
 
     to {
-        left: 120%;
+        transform: translateY(10px);
     }
 }
 
@@ -174,7 +198,10 @@ main {
     display: flex;
     justify-content: center;
     align-items: center;
-    outline: 1px solid rgb(24, 177, 58);
+}
+
+.floating-logo a {
+    color: rgb(24, 177, 58);
 }
 
 .floating-logo:hover {
@@ -191,7 +218,7 @@ aside {
 aside ol {
     display: flex;
     flex-direction: column;
-    width: 30dvw;
+    width: 50dvw;
     backdrop-filter: blur(10px);
     list-style: none;
     position: fixed;
@@ -216,9 +243,10 @@ aside ol a {
 }
 
 .star {
-    height: 2px;
-    width: 2px;
+    height: 5px;
+    width: 5px;
     background-color: white;
+    clip-path: polygon(50% 0%, 65% 35%, 100% 50%, 65% 65%, 50% 100%, 35% 65%, 0% 50%, 35% 35%);
     position: absolute;
 }
 
@@ -232,7 +260,117 @@ aside ol a {
     }
 }
 
+
+a {
+    color: white;
+    text-decoration: none;
+}
+
+main {
+    display: grid;
+    padding: 20px;
+    height: 100dvh;
+    grid-template-columns: 1fr 1fr;
+}
+
+.input-field {
+    display: flex;
+    flex-direction: column;
+    justify-self: center;
+    align-items: center;
+    align-self: center;
+    padding: 30px;
+    border-radius: 10px;
+    box-shadow: 1px 1px 5px black;
+    border: 1px solid gray;
+    position: relative;
+}
+
+.input-field button {
+    margin-top: 20px;
+    border-radius: 10px;
+    background-color: var(--theme-color);
+    border: none;
+    font-size: clamp(10px, 1dvw, 11px);
+    color: white;
+    position: relative;
+    height: clamp(25px, 7dvw, 30px);
+    width: clamp(75px, 7dvw, 130px);
+    text-align: center;
+    overflow: hidden;
+    box-shadow: 2px 2px 3px black;
+}
+
+.input-field button::after {
+    content: '';
+    position: absolute;
+    top: 0%;
+    left: -20%;
+    height: 100%;
+    width: 30px;
+    background: linear-gradient(to left, rgba(128, 128, 128, 0.479), transparent);
+    transform: skew(-20deg);
+    animation: btnshadow 2s linear infinite;
+}
+
+legend {
+    background-color: white;
+    color: var(--theme-color);
+}
+
+.input-field .row {
+    display: flex;
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.input-bar {
+    height: fit-content;
+    position: relative;
+    border: 1px solid black;
+    width: fit-content;
+    border-radius: 10px;
+    padding: 3px 5px;
+}
+
+.input-bar input {
+    border: none;
+    outline: none;
+    padding: 5px 10px;
+    width: 150px;
+    background-color: transparent;
+}
+
+.input-bar:focus-within {
+    border-color: rgb(12, 133, 190);
+}
+
+.input-bar input:focus~label,
+.input-bar input:not(:placeholder-shown)~label {
+    top: -7px;
+    color: rgb(12, 133, 190);
+}
+
+.input-bar label {
+    top: 10px;
+    left: 10px;
+    position: absolute;
+    background-color: white;
+    transition: top 0.2s ease;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 11px;
+}
+
 @media screen and (max-width:500px) {
+    header section:nth-of-type(1) {
+        position: relative;
+        margin-top: 13dvh;
+        display: flex;
+        flex-direction: column;
+        justify-self: center;
+    }
+
+
     .menubar {
         display: block;
     }
@@ -242,10 +380,25 @@ aside ol a {
     }
 
     header section:nth-of-type(2) {
+        margin-top: 52dvh;
         width: 90dvw;
     }
 
     header section:nth-of-type(2) button {
-        float: left;
+        float: none;
+        display: flex;
+        justify-self: center;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .input-field .row {
+        flex-direction: column;
+
+    }
+
+    main {
+        display: grid;
+        grid-template-columns: 1fr;
     }
 }
